# ckb-vm-deterministic-scheduler

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: rust.yml
docs/: notes.md  syscall_apis.h
examples/: dag_generator.rs  tx_verifier.rs
proptest-regressions/tests/: mod.txt
src/: lib.rs  syscalls.rs  types.rs
src/dev_utils/: dag.rs  mod.rs
src/tests/: mod.rs
test-contracts/: main.c  new_syscalls.h
