[package]
name = "ckb-vm-deterministic-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-vm = { git = "https://github.com/xxuejie/ckb-vm", rev = "f31b1c2", features = ["asm"] }
ckb-chain-spec = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
ckb-script = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
ckb-types = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
ckb-traits = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
log = "0.4.20"
