[package]
name = "ckb-vm-deterministic-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-vm = { git = "https://github.com/xxuejie/ckb-vm", rev = "f31b1c2", features = ["asm"] }
ckb-script = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
ckb-types = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
ckb-traits = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
log = "0.4.20"

[dev-dependencies]
clap = { version = "4.5.0", features = [ "cargo", "derive" ] }
ckb-chain-spec = { git = "https://github.com/xxuejie/ckb", rev = "2fbf14d" }
ckb-mock-tx-types = { git = "https://github.com/xxuejie/ckb-standalone-debugger", rev = "e6cd669" }
env_logger = "0.11.2"
serde_json = "1.0.103"
